# go-ref-lights

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .precommit.config.yaml  Dockerfile  README.md  TODO.md  app.py  cdk.context.json  check.sh  config.yaml  conftest.py  file_tree.py  go.mod  go.sum  heartbeat.go  main.go  main_test.go  notes.md  project_structure.txt  pyproject.toml  pytest.ini  upcoming_meets.json
config/: creds.txt  meet_creds.json  meet_creds2.json  meet_creds_2.json  meets.json  meets2.json
controllers/: admin_controller.go  admin_controller_test.go  auth_controller.go  auth_controller_test.go  hash_creds.py  loginHandler.go  loginHandler_test.go  main_test.go  meet_controller.go  meet_controller_test.go  mock_occupancy_service.go  page_controller.go  page_controller_test.go  position_controller.go  position_controller_test.go  referee_controller.go  sudo_controller.go  test_helpers.go  test_helpers_test.go
docker/: Dockerfile
go_ref_lights/: go_ref_lights_stack.py
heartbeat/: heartbeat.go
integration/: connection_test.go
logger/: logger.go  logger_test.go
middleware/: admin_required.go  admin_required_test.go  auth.go  auth_test.go  role.go  role_test.go  sudo_required.go
models/: meet.go  meet_test.go
referee-lights-cdk/: referee_lights_cdk_stack.py
referee_lights_cdk/: monitoring_stack.py  referee_lights_cdk_stack.py
services/: mock_occupancy_service.go  occupancy_service.go  occupancy_service_test.go  qrcode_service.go  qrcode_service_test.go
templates/: admin.html  center.html  centre.html  choose_meet.html  left.html  (+10 more)
(+40 files in other folders)
