[tool.poetry]
name = "go-ref-lights"
version = "0.1.0"
description = ""
authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.180.0"
pre-commit = "^4.1.0"
cairosvg = "^2.7.1"
constructs = "^10.4.2"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
